fixed height and image distortion when adding images in preview

--- a/react-app/src/components/RecipeBaseForm/CreateRecipeForm.css
+++ b/react-app/src/components/RecipeBaseForm/CreateRecipeForm.css
@@ -28,6 +28,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  max-height: 400px
 }
 
 #create-recipe-preview-image{
